@@ -1,4 +1,7 @@
 2009-05-26 Iuri Fernandes <iurifq@gmail.com>
+* Created view in contas to see the current contas
+
+2009-05-26 Iuri Fernandes <iurifq@gmail.com>
 * Fixed bug in hospedar
 * Began /views/contas/view.html.erb
 
